Xors3dIndie(withSamples)_750/headers/CPP/inc/xors3d.h

// Object handle typedef
typedef int Handle;
X3DDECL void X3DCALL xSetFXInt(Handle effect, const char * name, int value);
X3DDECL void X3DCALL xSetFXFloat(Handle effect, const char * name, float value);
X3DDECL void X3DCALL xSetFXBool(Handle effect, const char * name, bool value);
X3DDECL void X3DCALL xSetFXVector(Handle effect, const char * name, float x, float y, float z, float w = 0.0f);
X3DDECL void X3DCALL xSetFXVectorArray(Handle effect, const char * name, Handle value, int count);
X3DDECL void X3DCALL xSetFXMatrixArray(Handle effect, const char * name, Handle value, int count);
X3DDECL void X3DCALL xSetFXFloatArray(Handle effect, const char * name, Handle value, int count);
X3DDECL void X3DCALL xSetFXIntArray(Handle effect, const char * name, Handle value, int count);
X3DDECL void X3DCALL xSetFXEntityMatrix(Handle effect, const char * name, Handle matrix);
X3DDECL void X3DCALL xSetFXTexture(Handle effect, const char * name, Handle texture, int frame = 0);
X3DDECL void X3DCALL xSetFXMatrixSemantic(Handle effect, const char * name, int value);
X3DDECL void X3DCALL xDeleteFXConstant(Handle effect, const char * name);
X3DDECL void X3DCALL xClearFXConstants(Handle effect);
X3DDECL void X3DCALL xSetFXTechnique(Handle effect, const char * name);
// emitters commands
X3DDECL Handle X3DCALL xCreateEmitter(Handle psystem, Handle parent = NULL);
X3DDECL void X3DCALL xEmitterEnable(Handle emitter, bool state);
X3DDECL int X3DCALL xEmitterEnabled(Handle emitter);
X3DDECL Handle X3DCALL xEmitterGetPSystem(Handle emitter);
X3DDECL Handle X3DCALL xEmitterAddParticle(Handle emitter);
X3DDECL void X3DCALL xEmitterFreeParticle(Handle emitter, Handle particle);
X3DDECL int X3DCALL xEmitterValidateParticle(Handle emitter, Handle particle);
X3DDECL int X3DCALL xEmitterCountParticles(Handle emitter);
X3DDECL Handle X3DCALL xEmitterGetParticle(Handle emitter, int index);
X3DDECL int X3DCALL xEmitterAlive(Handle emitter);
// entity_animation commands
X3DDECL int X3DCALL xExtractAnimSeq(Handle entity, int firstFrame, int lastFrame, int sequence = 0);
X3DDECL int X3DCALL xLoadAnimSeq(Handle entity, const char * path);
X3DDECL void X3DCALL xSetAnimSpeed(Handle entity, float speed, const char * rootBone = "");
X3DDECL float X3DCALL xAnimSpeed(Handle entity, const char * rootBone = "");
X3DDECL int X3DCALL xAnimating(Handle entity, const char * rootBone = "");
X3DDECL float X3DCALL xAnimTime(Handle entity, const char * rootBone = "");
X3DDECL void X3DCALL xAnimate(Handle entity, int mode = 1, float speed = 1.0f, int sequence = 0, float translate = 0.0f, const char * rootBone = "");
X3DDECL int X3DCALL xAnimSeq(Handle entity, const char * rootBone = "");
X3DDECL float X3DCALL xAnimLength(Handle entity, const char * rootBone = "");
X3DDECL void X3DCALL xSetAnimTime(Handle entity, float time, int sequence, const char * rootBone = "");
X3DDECL void X3DCALL xSetAnimFrame(Handle entity, float frame, int sequence, const char * rootBone = "");
// entity_control commands
X3DDECL void X3DCALL xEntityAutoFade(Handle entity, float nearRange, float farRange);
X3DDECL void X3DCALL xEntityOrder(Handle entity, int order);
X3DDECL void X3DCALL xFreeEntity(Handle entity);
X3DDECL Handle X3DCALL xCopyEntity(Handle entity, Handle parent = NULL, int cloneBuffers = 0);
X3DDECL void X3DCALL xPaintEntity(Handle entity, Handle brush);
X3DDECL void X3DCALL xEntityShininess(Handle entity, float shininess);
X3DDECL void X3DCALL xEntityPickMode(Handle entity, int mode, bool obscurer = true, bool recursive = true);
X3DDECL void X3DCALL xEntityTexture(Handle entity, Handle texture, int frame = 0, int index = 0, int isRecursive = 1);