Xors3dIndie(withSamples)_750/headers/C#/xors3d.cs


	[DllImport("xors3d.dll", EntryPoint = "xSetFXInt")]
	public static extern void SetFXInt_(int effect, StringBuilder name, int value);
	public static void SetFXInt(int effect, string name, int value)
	{
		SetFXInt_(effect, new StringBuilder(name), value);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetFXFloat")]
	public static extern void SetFXFloat_(int effect, StringBuilder name, float value);
	public static void SetFXFloat(int effect, string name, float value)
	{
		SetFXFloat_(effect, new StringBuilder(name), value);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetFXBool")]
	public static extern void SetFXBool_(int effect, StringBuilder name, bool value);
	public static void SetFXBool(int effect, string name, bool value)
	{
		SetFXBool_(effect, new StringBuilder(name), value);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetFXVector")]
	public static extern void SetFXVector_(int effect, StringBuilder name, float x, float y, float z, float w);
	public static void SetFXVector(int effect, string name, float x, float y, float z, float w)
	{
		SetFXVector_(effect, new StringBuilder(name), x, y, z, w);
	}
	public static void SetFXVector(int effect, string name, float x, float y, float z)
	{
		 SetFXVector(effect, name, x, y, z, 0.0f);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetFXVectorArray")]
	public static extern void SetFXVectorArray_(int effect, StringBuilder name, int value, int count);
	public static void SetFXVectorArray(int effect, string name, int value, int count)
	{
		SetFXVectorArray_(effect, new StringBuilder(name), value, count);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetFXMatrixArray")]
	public static extern void SetFXMatrixArray_(int effect, StringBuilder name, int value, int count);
	public static void SetFXMatrixArray(int effect, string name, int value, int count)
	{
		SetFXMatrixArray_(effect, new StringBuilder(name), value, count);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetFXFloatArray")]
	public static extern void SetFXFloatArray_(int effect, StringBuilder name, int value, int count);
	public static void SetFXFloatArray(int effect, string name, int value, int count)
	{
		SetFXFloatArray_(effect, new StringBuilder(name), value, count);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetFXIntArray")]
	public static extern void SetFXIntArray_(int effect, StringBuilder name, int value, int count);
	public static void SetFXIntArray(int effect, string name, int value, int count)
	{
		SetFXIntArray_(effect, new StringBuilder(name), value, count);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetFXEntityMatrix")]
	public static extern void SetFXEntityMatrix_(int effect, StringBuilder name, int matrix);
	public static void SetFXEntityMatrix(int effect, string name, int matrix)
	{
		SetFXEntityMatrix_(effect, new StringBuilder(name), matrix);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetFXTexture")]
	public static extern void SetFXTexture_(int effect, StringBuilder name, int texture, int frame);
	public static void SetFXTexture(int effect, string name, int texture, int frame)
	{
		SetFXTexture_(effect, new StringBuilder(name), texture, frame);
	}
	public static void SetFXTexture(int effect, string name, int texture)
	{
		 SetFXTexture(effect, name, texture, 0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetFXMatrixSemantic")]
	public static extern void SetFXMatrixSemantic_(int effect, StringBuilder name, int value);
	public static void SetFXMatrixSemantic(int effect, string name, int value)
	{
		SetFXMatrixSemantic_(effect, new StringBuilder(name), value);
	}
	[DllImport("xors3d.dll", EntryPoint = "xDeleteFXConstant")]
	public static extern void DeleteFXConstant_(int effect, StringBuilder name);
	public static void DeleteFXConstant(int effect, string name)
	{
		DeleteFXConstant_(effect, new StringBuilder(name));
	}
	[DllImport("xors3d.dll", EntryPoint = "xClearFXConstants")]
	public static extern void ClearFXConstants(int effect);

	[DllImport("xors3d.dll", EntryPoint = "xSetFXTechnique")]
	public static extern void SetFXTechnique_(int effect, StringBuilder name);
	public static void SetFXTechnique(int effect, string name)
	{
		SetFXTechnique_(effect, new StringBuilder(name));
	}

	// emitters commands
	[DllImport("xors3d.dll", EntryPoint = "xCreateEmitter")]
	public static extern int CreateEmitter(int psystem, int parent);

	public static int CreateEmitter(int psystem)
	{
		return CreateEmitter(psystem, 0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xEmitterEnable")]
	public static extern void EmitterEnable(int emitter, bool state);

	[DllImport("xors3d.dll", EntryPoint = "xEmitterEnabled")]
	public static extern int EmitterEnabled(int emitter);

	[DllImport("xors3d.dll", EntryPoint = "xEmitterGetPSystem")]
	public static extern int EmitterGetPSystem(int emitter);

	[DllImport("xors3d.dll", EntryPoint = "xEmitterAddParticle")]
	public static extern int EmitterAddParticle(int emitter);

	[DllImport("xors3d.dll", EntryPoint = "xEmitterFreeParticle")]
	public static extern void EmitterFreeParticle(int emitter, int particle);

	[DllImport("xors3d.dll", EntryPoint = "xEmitterValidateParticle")]
	public static extern int EmitterValidateParticle(int emitter, int particle);

	[DllImport("xors3d.dll", EntryPoint = "xEmitterCountParticles")]
	public static extern int EmitterCountParticles(int emitter);

	[DllImport("xors3d.dll", EntryPoint = "xEmitterGetParticle")]
	public static extern int EmitterGetParticle(int emitter, int index);

	[DllImport("xors3d.dll", EntryPoint = "xEmitterAlive")]
	public static extern int EmitterAlive(int emitter);


	// entity_animation commands
	[DllImport("xors3d.dll", EntryPoint = "xExtractAnimSeq")]
	public static extern int ExtractAnimSeq(int entity, int firstFrame, int lastFrame, int sequence);

	public static int ExtractAnimSeq(int entity, int firstFrame, int lastFrame)
	{
		return ExtractAnimSeq(entity, firstFrame, lastFrame, 0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xLoadAnimSeq")]
	public static extern int LoadAnimSeq_(int entity, StringBuilder path);
	public static int LoadAnimSeq(int entity, string path)
	{
		return LoadAnimSeq_(entity, new StringBuilder(path));
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetAnimSpeed")]
	public static extern void SetAnimSpeed_(int entity, float speed, StringBuilder rootBone);
	public static void SetAnimSpeed(int entity, float speed, string rootBone)
	{
		SetAnimSpeed_(entity, speed, new StringBuilder(rootBone));
	}
	public static void SetAnimSpeed(int entity, float speed)
	{
		 SetAnimSpeed(entity, speed, "");
	}
	[DllImport("xors3d.dll", EntryPoint = "xAnimSpeed")]
	public static extern float AnimSpeed_(int entity, StringBuilder rootBone);
	public static float AnimSpeed(int entity, string rootBone)
	{
		return AnimSpeed_(entity, new StringBuilder(rootBone));
	}
	public static float AnimSpeed(int entity)
	{
		return AnimSpeed(entity, "");
	}
	[DllImport("xors3d.dll", EntryPoint = "xAnimating")]
	public static extern int Animating_(int entity, StringBuilder rootBone);
	public static int Animating(int entity, string rootBone)
	{
		return Animating_(entity, new StringBuilder(rootBone));
	}
	public static int Animating(int entity)
	{
		return Animating(entity, "");
	}
	[DllImport("xors3d.dll", EntryPoint = "xAnimTime")]
	public static extern float AnimTime_(int entity, StringBuilder rootBone);
	public static float AnimTime(int entity, string rootBone)
	{
		return AnimTime_(entity, new StringBuilder(rootBone));
	}
	public static float AnimTime(int entity)
	{
		return AnimTime(entity, "");
	}
	[DllImport("xors3d.dll", EntryPoint = "xAnimate")]
	public static extern void Animate_(int entity, int mode, float speed, int sequence, float translate, StringBuilder rootBone);
	public static void Animate(int entity, int mode, float speed, int sequence, float translate, string rootBone)
	{
		Animate_(entity, mode, speed, sequence, translate, new StringBuilder(rootBone));
	}
	public static void Animate(int entity, int mode, float speed, int sequence, float translate)
	{
		 Animate(entity, mode, speed, sequence, translate, "");
	}
	public static void Animate(int entity, int mode, float speed, int sequence)
	{
		 Animate(entity, mode, speed, sequence, 0.0f, "");
	}
	public static void Animate(int entity, int mode, float speed)
	{
		 Animate(entity, mode, speed, 0, 0.0f, "");
	}
	public static void Animate(int entity, int mode)
	{
		 Animate(entity, mode, 1.0f, 0, 0.0f, "");
	}
	public static void Animate(int entity)
	{
		 Animate(entity, 1, 1.0f, 0, 0.0f, "");
	}
	[DllImport("xors3d.dll", EntryPoint = "xAnimSeq")]
	public static extern int AnimSeq_(int entity, StringBuilder rootBone);
	public static int AnimSeq(int entity, string rootBone)
	{
		return AnimSeq_(entity, new StringBuilder(rootBone));
	}
	public static int AnimSeq(int entity)
	{
		return AnimSeq(entity, "");
	}
	[DllImport("xors3d.dll", EntryPoint = "xAnimLength")]
	public static extern float AnimLength_(int entity, StringBuilder rootBone);
	public static float AnimLength(int entity, string rootBone)
	{
		return AnimLength_(entity, new StringBuilder(rootBone));
	}
	public static float AnimLength(int entity)
	{
		return AnimLength(entity, "");
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetAnimTime")]
	public static extern void SetAnimTime_(int entity, float time, int sequence, StringBuilder rootBone);
	public static void SetAnimTime(int entity, float time, int sequence, string rootBone)
	{
		SetAnimTime_(entity, time, sequence, new StringBuilder(rootBone));
	}
	public static void SetAnimTime(int entity, float time, int sequence)
	{
		 SetAnimTime(entity, time, sequence, "");
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetAnimFrame")]
	public static extern void SetAnimFrame_(int entity, float frame, int sequence, StringBuilder rootBone);
	public static void SetAnimFrame(int entity, float frame, int sequence, string rootBone)
	{
		SetAnimFrame_(entity, frame, sequence, new StringBuilder(rootBone));
	}
	public static void SetAnimFrame(int entity, float frame, int sequence)
	{
		 SetAnimFrame(entity, frame, sequence, "");
	}

	// entity_control commands
	[DllImport("xors3d.dll", EntryPoint = "xEntityAutoFade")]
	public static extern void EntityAutoFade(int entity, float nearRange, float farRange);

	[DllImport("xors3d.dll", EntryPoint = "xEntityOrder")]
	public static extern void EntityOrder(int entity, int order);

	[DllImport("xors3d.dll", EntryPoint = "xFreeEntity")]
	public static extern void FreeEntity(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xCopyEntity")]
	public static extern int CopyEntity(int entity, int parent, int cloneBuffers);

	public static int CopyEntity(int entity, int parent)
	{
		return CopyEntity(entity, parent, 0);
	}
	public static int CopyEntity(int entity)
	{
		return CopyEntity(entity, 0, 0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xPaintEntity")]
	public static extern void PaintEntity(int entity, int brush);

	[DllImport("xors3d.dll", EntryPoint = "xEntityShininess")]
	public static extern void EntityShininess(int entity, float shininess);

	[DllImport("xors3d.dll", EntryPoint = "xEntityPickMode")]
	public static extern void EntityPickMode(int entity, int mode, bool obscurer, bool recursive);

	public static void EntityPickMode(int entity, int mode, bool obscurer)
	{
		 EntityPickMode(entity, mode, obscurer, true);
	}
	public static void EntityPickMode(int entity, int mode)
	{
		 EntityPickMode(entity, mode, true, true);
	}
	[DllImport("xors3d.dll", EntryPoint = "xEntityTexture")]
	public static extern void EntityTexture(int entity, int texture, int frame, int index, int isRecursive);
